--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore credentials
+/config/credentials.yml.enc
+
 /app/assets/builds/*
 !/app/assets/builds/.keep
